# ai4radmed

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  GEMINI.md  Makefile  Makefile_project  README.md  _environment  ai4radmed.Rproj  auto_unseal.bat  pyproject.toml  temp_oidc_auth.lua
.cursor/rules/: ai-agent-guidelines.mdc
config/: dcmtk.yml  elk.yml  keycloak.yml  ldap.yml  nginx.yml  nmopti.yml  orthanc-mock.yml  orthanc-pseudo.yml  orthanc-raw.yml  postgres.yml  slicer.yml  vault.yml  vaultwarden.yml
docs/: docker-compose-cross-platform-compatibility.md  service-path-strategy.md
documentations/: README.md  ai-agent-guidelines.md  postgres.md  vault.md
documents/: DEVELOPERS.md  README.md  ai-agent-guidelines.md  elk.md  keycloak.md  ldap.md  oidc-gateway.md  openrem.md  operations.md  orthanc.md  security-implementation-plan.md  slicer.md  vaultwarden.md
extensions/nmopti/: README.md
scripts/ai4infra/: ai4infra-cli.py
scripts/ai4radmed/: __init__.py  ai4radmed-cli.py  auto_unseal.py  create_test_user.py  debug_login.py  keycloak_setup.py  provision_keycloak.sh  seed_users.py  setup_keycloak_config.py  setup_mfa.py  test_runner.py  verify_nginx_security.py
scripts/setup/: setup_env.py  setup_network.py  setup_venv.py
src/common/: sudo_helpers.py
templates/dcmtk/: README.md  docker-compose.yml
templates/elk/: docker-compose.yml
templates/hosts/: ai4radmed.hosts
templates/keycloak/: docker-compose.yml
templates/ldap/: docker-compose.yml
templates/nginx/: docker-compose.yml
templates/nmopti/: docker-compose.yml
tests/: report.html
(+74 files in other folders)
