[project]
name = "ai4radmed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.10"
dependencies = [
    "click>=8.3.1",
    "iniconfig>=2.3.0",
    "markdown-it-py>=4.0.0",
    "mdurl>=0.1.2",
    "openpyxl>=3.1.5",
    "packaging>=26.0",
    "pandas>=3.0.1",
    "pluggy>=1.6.0",
    "pygments>=2.19.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "shellingham>=1.5.4",
    "typer>=0.24.1",
    "typing-extensions>=4.15.0",
]

[tool.pytest.ini_options]
norecursedirs = ["manual"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
